--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,172 @@ Green: #00B172
 White: #FFF
 
 */
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 175%;
+}
+
+
+.boxed {
+    width: 100%;
+}
+
+#first-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+nav {
+    width: 100%;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo {
+    width: 15%;
+    margin-left: 30px;
+}
+
+ul {
+    width: 33%;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding-inline-start: 0;
+    font-size: 22px;
+    font-weight: 300;
+}
+
+#landing {
+    width: 100%;
+    height: 1000px;
+    background-image: url('../images/landing.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: #FFF;
+    text-align: center;
+}
+
+#landing h1 {
+    font-size: 85px;
+    margin-top: 425px;
+    margin-bottom: 70px;
+    font-weight: 500;
+}
+
+#landing p {
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 50%;
+}
+
+#second-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+#second-section h2 {
+    font-size: 40px;
+    font-weight: 500;
+    text-decoration: underline;
+    text-decoration-color: #00B172;
+    text-underline-offset: 15px;
+    margin-top: 50px;
+    margin-bottom: 120px;
+}
+
+#second-section-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 100px;
+}
+
+#second-section-container .box {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.box-image {
+    width: 33%;
+    height: 28%;
+}
+
+#second-section-container .box h3 {
+    color: #00B172;
+    font-size: 30px;
+}
+
+#second-section-container .box p {
+    font-size: 25px;
+    font-weight: 250;
+    width: 67%;
+    text-align: center;
+}
+
+#third-section {
+    background-color: #00B172;
+    width: 95%;
+    margin: auto;
+    position: relative;
+}
+
+#third-section-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#third-section-container {
+    margin-left: 100px;
+    color: #FFF;
+    width: 20%;
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start
+}
+
+#third-section-container h2 {
+    width: 200%;
+    font-size: 35px;
+    font-weight: 450;
+    text-decoration: underline;
+    text-underline-offset: 15px;
+    margin-bottom: 40px;
+    margin-top: 70px;
+}
+
+#third-section-container h3 {
+    font-size: 30px;
+    font-weight: 450;
+    margin: 0;
+}
+
+#third-section-container p {
+    font-size: 20px;
+    font-weight: 250;
+    margin: 0;
+}
+
+#iconwhite {
+    width: 10%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#kanye {
+    margin-right: 100px;
+    width: 22%;
+}
