--- a/styles/style.css
+++ b/styles/style.css
@@ -26,11 +26,15 @@ body {
 }
 
 nav {
+    background-color: #FFF;
     width: 100%;
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 1000
 }
 
 #logo {
